--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "hardhat-fund-me-fcc",
+  "author": "DefiJack",
+  "version": "1.0.0",
   "devDependencies": {
     "@chainlink/contracts": "^0.6.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
